[package]
name = "bevy_spine"
version = "0.6.0"
edition = "2021"
description = "Spine plugin for Bevy utilizing rusty_spine"
homepage = "https://github.com/jabuwu/bevy_spine"
repository = "https://github.com/jabuwu/bevy_spine"
readme = "readme.md"
license-file = "LICENSE"
exclude = [
    "assets/*",
]

[dependencies]
rusty_spine = "0.6"
bevy = { version = "0.11", default-features = false, features = [ "bevy_render", "bevy_asset", "bevy_sprite" ] }
glam = { version = "0.24", features = [ "mint" ] }
anyhow = "1.0"

[dev-dependencies]
lerp = "0.4"
bevy = { version = "0.11", default-features = true }
