[package]
name = "bevy_spine"
version = "0.10.1"
edition = "2021"
description = "Spine plugin for Bevy utilizing rusty_spine"
homepage = "https://github.com/jabuwu/bevy_spine"
repository = "https://github.com/jabuwu/bevy_spine"
readme = "readme.md"
license-file = "LICENSE"
exclude = ["assets/*"]

[dependencies]
rusty_spine = "0.8"
bevy = { version = "^0.15.2", default-features = false, features = [
    "bevy_render",
    "bevy_asset",
    "bevy_sprite",
] }
glam = { version = "0.29", features = ["mint"] }
thiserror = "1.0.50"

[dev-dependencies]
lerp = "0.5"
bevy = { version = "0.15", default-features = true }

[workspace]
resolver = "2"
members = ["ci"]
